--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "file-loader": "1.1.5",
     "firebase": "^4.8.2",
     "fs-extra": "3.0.1",
+    "gsap": "^1.20.4",
     "html-webpack-plugin": "2.29.0",
     "idb-keyval": "^2.3.0",
     "jest": "20.0.4",
-    "material-ui": "^0.20.0",
+    "mobx": "^4.2.0",
+    "mobx-react": "^5.0.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -42,6 +44,8 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-slick": "^0.23.1",
+    "slick-carousel": "^1.8.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
