--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cra-append-sw": "^2.1.1",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
+    "es6-promise": "^4.2.4",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.0.1",
     "eslint-loader": "1.9.0",
