--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,7 @@
 {
-  "short_name": "WMP",
-  "name": "WheresMyPeers",
+  "short_name": "My Peers",
+  "name": "",
   "icons": [
-    {
-      "src": "/images/icon-36x36.png",
-      "sizes": "36x36",
-      "type": "image/png"
-    },
-    {
-      "src": "/images/icon-48x48.png",
-      "sizes": "48x48",
-      "type": "image/png"
-    },
-    {
-      "src": "/images/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
     {
       "src": "/images/icon-96x96.png",
       "sizes": "96x96",
@@ -33,25 +18,15 @@
       "type": "image/png"
     },
     {
-      "src": "/images/icon-512x512.png",
-      "sizes": "256x256",
-      "type": "image/png"
-    },
-    {
-      "src": "/images/icon-512x512.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "/images/icon-512x512.png",
-      "sizes": "512x512",
+      "src": "/images/icon-networking-512.png",
+      "sizes": "512x512 1024x1024",
       "type": "image/png"
     }
   ],
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff",
+  "background_color": "#d83a79",
   "gcm_sender_id": "332446971218"
 
 }
