--- a/public/manifest.v1.74.json
+++ b/public/manifest.v1.74.json
@@ -11,7 +11,5 @@
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#d83a79",
-  "gcm_sender_id": "332446971218"
-
+  "background_color": "#d83a79"
 }
