--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "set PORT=4300 && node scripts/start.js",
-    "build": "node scripts/build.js && rm -Rf ../server/build && mv build ../server/build",
+    "start": "PORT=4300 node scripts/start.js",
+    "prebuild":"rm -Rf ../WheresMyPeers-server/build",
+    "build": "node scripts/build.js",
+    "postbuild": "mv build ../WheresMyPeers-server/build",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
